--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,32 @@
-version: '3'
+version: '3.8'
 services:
-  web:
-    image: httpd:2.4
+  app-server:
+    image: php:7.2-apache
     container_name: httpd-server
+    command:
+      # - 'RUN apt-get update && apt-get install -y git'
+      # - 'RUN docker-php-ext-install pdo pdo_mysql mysqli'
+      # - 'RUN a2enmod rewrite'
     volumes:
-      - ./:/usr/local/apache2/htdocs/
+      - ./:/var/www/html
     restart: always
     ports:
       - '8080:80'
+      - '8083:443'
+    depends_on:
+      - mysql
+    links:
+      - 'mysql'
+
+  mysql:
+    image: mysql:8.0.0
+    container_name: mysql-server
+    environment:
+      - MYSQL_ROOT_PASSWORD=secret
+      - MYSQL_TCP_PORT=3306
+    volumes:
+      - datafiles:/var/lib/mysql
+    restart: always
+
+volumes:
+  datafiles:
